// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`guard operationIdGuard safe mode should work ok: 1 error 1`] = `
Object {
  "errors": Array [
    "【错误】方法 \\"personsUsingGET\\" & \\"get /api/v1/interviewer/persons\\" 存在不可控风险，需锁定映射关系",
    "【错误】方法 \\"personsUsingGET_1\\" & \\"get /api/v1/persons\\" 存在不可控风险，需锁定映射关系",
    "【错误】方法 \\"personsUsingGET_2\\" & \\"get /api/v1/interviewer/{user-name}\\" 存在不可控风险，需锁定映射关系",
  ],
  "suggestions": Array [
    "锁定映射建议，添加到 service 配置",
    Object {
      "guardConfig": Object {
        "methodUrl2OperationIdMap": Object {
          "get /api/v1/interviewer/persons": "personsUsingGET",
          "get /api/v1/interviewer/{user-name}": "personsUsingGET_2",
          "get /api/v1/persons": "personsUsingGET_1",
        },
      },
    },
  ],
  "warnings": Array [],
}
`;

exports[`guard operationIdGuard safe mode should work ok: 1 error 2`] = `
Object {
  "basePath": "/",
  "paths": Object {
    "/api/v1/interviewer/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET",
        "parameters": Array [],
        "privateMethodUrl": "get /api/v1/interviewer/persons",
        "privateOperationId": "v1InterviewerPersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
    "/api/v1/interviewer/{user-name}": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET_2",
        "parameters": Array [],
        "privateMethodUrl": "get /api/v1/interviewer/{user-name}",
        "privateOperationId": "v1InterviewerUserNameUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
    "/api/v1/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET_1",
        "parameters": Array [],
        "privateMethodUrl": "get /api/v1/persons",
        "privateOperationId": "v1PersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
  },
}
`;

exports[`guard operationIdGuard safe mode should work ok: 2 autofix 1`] = `
Object {
  "errors": Array [],
  "suggestions": Array [
    "旧 => 新 方法替换映射关系，请按建议顺序降序逐一替换",
    Object {
      "personsUsingGET": "v1PersonsUsingGet",
      "personsUsingGET_1": "v1InterviewerPersonsUsingGet",
      "personsUsingGET_2": "v1InterviewerUserNameUsingGet",
    },
  ],
  "warnings": Array [
    "【警告】方法 \\"personsUsingGET\\" 与 \\"get /api/v1/interviewer/persons\\" 不匹配，自动纠正为 \\"personsUsingGET_1\\"",
    "【警告】方法 \\"personsUsingGET_1\\" 与 \\"get /api/v1/persons\\" 不匹配，自动纠正为 \\"personsUsingGET\\"",
  ],
}
`;

exports[`guard operationIdGuard safe mode should work ok: 2 autofix 2`] = `
Object {
  "basePath": "/",
  "paths": Object {
    "/api/v1/interviewer/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "v1InterviewerPersonsUsingGet",
        "parameters": Array [],
        "privateOperationId": "v1InterviewerPersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
    "/api/v1/interviewer/{user-name}": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "v1InterviewerUserNameUsingGet",
        "parameters": Array [],
        "privateMethodUrl": "get /api/v1/interviewer/{user-name}",
        "privateOperationId": "v1InterviewerUserNameUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
    "/api/v1/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "v1PersonsUsingGet",
        "parameters": Array [],
        "privateOperationId": "v1PersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
  },
}
`;

exports[`guard operationIdGuard safe mode should work ok: 3 remove error 1`] = `
Object {
  "errors": Array [
    "【错误】方法 \\"personsUsingGET\\" 对应的 \\"get /api/v1/persons\\" 似乎已被移除或者发生了变化，请更新",
    "【错误】方法 \\"personsUsingGET_1\\" 对应的 \\"get /api/v1/interviewer/persons\\" 似乎已被移除或者发生了变化，请更新",
    "【错误】方法 \\"personsUsingGET_2\\" 对应的 \\"get /api/v1/interviewer/{user-name}\\" 似乎已被移除或者发生了变化，请更新",
  ],
  "suggestions": Array [],
  "warnings": Array [],
}
`;

exports[`guard operationIdGuard safe mode should work ok: 3 remove error 2`] = `
Object {
  "basePath": "/",
  "paths": Object {},
}
`;

exports[`guard operationIdGuard safe mode should work ok: 4 partial remove error 1`] = `
Object {
  "errors": Array [
    "【错误】方法 \\"personsUsingGET\\" 对应的 \\"get /api/v1/persons\\" 似乎已被移除或者发生了变化，请更新",
    "【错误】方法 \\"personsUsingGET_2\\" 对应的 \\"get /api/v1/interviewer/{user-name}\\" 似乎已被移除或者发生了变化，请更新",
  ],
  "suggestions": Array [],
  "warnings": Array [
    "【警告】方法 \\"personsUsingGET\\" 与 \\"get /api/v1/interviewer/persons\\" 不匹配，自动纠正为 \\"personsUsingGET_1\\"",
  ],
}
`;

exports[`guard operationIdGuard safe mode should work ok: 4 partial remove error 2`] = `
Object {
  "basePath": "/",
  "paths": Object {
    "/api/v1/interviewer/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET_1",
        "parameters": Array [],
        "privateOperationId": "v1InterviewerPersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
  },
}
`;

exports[`guard operationIdGuard safe mode should work ok: 5 partial remove ok 1`] = `
Object {
  "errors": Array [
    "【错误】方法 \\"personsUsingGET\\" 对应的 \\"get /api/v1/persons\\" 似乎已被移除或者发生了变化，请更新",
    "【错误】方法 \\"personsUsingGET_2\\" 对应的 \\"get /api/v1/interviewer/{user-name}\\" 似乎已被移除或者发生了变化，请更新",
  ],
  "suggestions": Array [],
  "warnings": Array [
    "【警告】方法 \\"personsUsingGET\\" 与 \\"get /api/v1/interviewer/persons\\" 不匹配，自动纠正为 \\"personsUsingGET_1\\"",
  ],
}
`;

exports[`guard operationIdGuard safe mode should work ok: 5 partial remove ok 2`] = `
Object {
  "basePath": "/",
  "paths": Object {
    "/api/v1/interviewer/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET_1",
        "parameters": Array [],
        "privateOperationId": "v1InterviewerPersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
  },
}
`;

exports[`guard operationIdGuard should work ok: 1 error 1`] = `
Object {
  "errors": Array [
    "【错误】方法 \\"personsUsingGET\\" & \\"get /api/v1/interviewer/persons\\" 存在不可控风险，需锁定映射关系",
    "【错误】方法 \\"personsUsingGET_1\\" & \\"get /api/v1/persons\\" 存在不可控风险，需锁定映射关系",
    "【错误】方法 \\"personsUsingGET_2\\" & \\"get /api/v1/interviewer/{user-name}\\" 存在不可控风险，需锁定映射关系",
  ],
  "suggestions": Array [
    "锁定映射建议，添加到 service 配置",
    Object {
      "guardConfig": Object {
        "methodUrl2OperationIdMap": Object {
          "get /api/v1/interviewer/persons": "personsUsingGET",
          "get /api/v1/interviewer/{user-name}": "personsUsingGET_2",
          "get /api/v1/persons": "personsUsingGET_1",
        },
      },
    },
  ],
  "warnings": Array [],
}
`;

exports[`guard operationIdGuard should work ok: 1 error 2`] = `
Object {
  "basePath": "/",
  "paths": Object {
    "/api/v1/interviewer/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET",
        "parameters": Array [],
        "privateMethodUrl": "get /api/v1/interviewer/persons",
        "privateOperationId": "v1InterviewerPersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
    "/api/v1/interviewer/{user-name}": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET_2",
        "parameters": Array [],
        "privateMethodUrl": "get /api/v1/interviewer/{user-name}",
        "privateOperationId": "v1InterviewerUserNameUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
    "/api/v1/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET_1",
        "parameters": Array [],
        "privateMethodUrl": "get /api/v1/persons",
        "privateOperationId": "v1PersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
  },
}
`;

exports[`guard operationIdGuard should work ok: 2 autofix 1`] = `
Object {
  "errors": Array [],
  "suggestions": Array [],
  "warnings": Array [
    "【警告】方法 \\"personsUsingGET\\" 与 \\"get /api/v1/interviewer/persons\\" 不匹配，自动纠正为 \\"personsUsingGET_1\\"",
    "【警告】方法 \\"personsUsingGET_1\\" 与 \\"get /api/v1/persons\\" 不匹配，自动纠正为 \\"personsUsingGET\\"",
  ],
}
`;

exports[`guard operationIdGuard should work ok: 2 autofix 2`] = `
Object {
  "basePath": "/",
  "paths": Object {
    "/api/v1/interviewer/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET_1",
        "parameters": Array [],
        "privateOperationId": "v1InterviewerPersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
    "/api/v1/interviewer/{user-name}": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET_2",
        "parameters": Array [],
        "privateMethodUrl": "get /api/v1/interviewer/{user-name}",
        "privateOperationId": "v1InterviewerUserNameUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
    "/api/v1/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET",
        "parameters": Array [],
        "privateOperationId": "v1PersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
  },
}
`;

exports[`guard operationIdGuard should work ok: 3 remove error 1`] = `
Object {
  "errors": Array [
    "【错误】方法 \\"personsUsingGET\\" 对应的 \\"get /api/v1/persons\\" 似乎已被移除或者发生了变化，请更新",
    "【错误】方法 \\"personsUsingGET_1\\" 对应的 \\"get /api/v1/interviewer/persons\\" 似乎已被移除或者发生了变化，请更新",
    "【错误】方法 \\"personsUsingGET_2\\" 对应的 \\"get /api/v1/interviewer/{user-name}\\" 似乎已被移除或者发生了变化，请更新",
  ],
  "suggestions": Array [],
  "warnings": Array [],
}
`;

exports[`guard operationIdGuard should work ok: 3 remove error 2`] = `
Object {
  "basePath": "/",
  "paths": Object {},
}
`;

exports[`guard operationIdGuard should work ok: 4 partial remove error 1`] = `
Object {
  "errors": Array [
    "【错误】方法 \\"personsUsingGET\\" 对应的 \\"get /api/v1/persons\\" 似乎已被移除或者发生了变化，请更新",
    "【错误】方法 \\"personsUsingGET_2\\" 对应的 \\"get /api/v1/interviewer/{user-name}\\" 似乎已被移除或者发生了变化，请更新",
  ],
  "suggestions": Array [],
  "warnings": Array [
    "【警告】方法 \\"personsUsingGET\\" 与 \\"get /api/v1/interviewer/persons\\" 不匹配，自动纠正为 \\"personsUsingGET_1\\"",
  ],
}
`;

exports[`guard operationIdGuard should work ok: 4 partial remove error 2`] = `
Object {
  "basePath": "/",
  "paths": Object {
    "/api/v1/interviewer/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET_1",
        "parameters": Array [],
        "privateOperationId": "v1InterviewerPersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
  },
}
`;

exports[`guard operationIdGuard should work ok: 5 partial remove ok 1`] = `
Object {
  "errors": Array [
    "【错误】方法 \\"personsUsingGET_1\\" 对应的 \\"get /api/v1/persons\\" 似乎已被移除或者发生了变化，请更新",
    "【错误】方法 \\"personsUsingGET_2\\" 对应的 \\"get /api/v1/interviewer/{user-name}\\" 似乎已被移除或者发生了变化，请更新",
  ],
  "suggestions": Array [],
  "warnings": Array [],
}
`;

exports[`guard operationIdGuard should work ok: 5 partial remove ok 2`] = `
Object {
  "basePath": "/",
  "paths": Object {
    "/api/v1/interviewer/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET",
        "parameters": Array [],
        "privateMethodUrl": "get /api/v1/interviewer/persons",
        "privateOperationId": "v1InterviewerPersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
  },
}
`;

exports[`guard operationIdGuard strict mode should work ok: 1 error 1`] = `
Object {
  "errors": Array [
    "【错误】方法 \\"personsUsingGET\\" & \\"get /api/v1/interviewer/persons\\" 存在不可控风险，需锁定映射关系",
    "【错误】方法 \\"personsUsingGET_1\\" & \\"get /api/v1/persons\\" 存在不可控风险，需锁定映射关系",
    "【错误】方法 \\"personsUsingGET_2\\" & \\"get /api/v1/interviewer/{user-name}\\" 存在不可控风险，需锁定映射关系",
  ],
  "suggestions": Array [
    "锁定映射建议，添加到 service 配置",
    Object {
      "guardConfig": Object {
        "methodUrl2OperationIdMap": Object {
          "get /api/v1/interviewer/persons": "personsUsingGET",
          "get /api/v1/interviewer/{user-name}": "personsUsingGET_2",
          "get /api/v1/persons": "personsUsingGET_1",
        },
      },
    },
  ],
  "warnings": Array [],
}
`;

exports[`guard operationIdGuard strict mode should work ok: 1 error 2`] = `
Object {
  "basePath": "/",
  "paths": Object {
    "/api/v1/interviewer/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET",
        "parameters": Array [],
        "privateMethodUrl": "get /api/v1/interviewer/persons",
        "privateOperationId": "v1InterviewerPersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
    "/api/v1/interviewer/{user-name}": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET_2",
        "parameters": Array [],
        "privateMethodUrl": "get /api/v1/interviewer/{user-name}",
        "privateOperationId": "v1InterviewerUserNameUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
    "/api/v1/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET_1",
        "parameters": Array [],
        "privateMethodUrl": "get /api/v1/persons",
        "privateOperationId": "v1PersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
  },
}
`;

exports[`guard operationIdGuard strict mode should work ok: 2 autofix 1`] = `
Object {
  "errors": Array [],
  "suggestions": Array [
    "旧 => 新 方法替换映射关系，请按建议顺序降序逐一替换",
    Object {
      "personsUsingGET": "v1PersonsUsingGet",
      "personsUsingGET_1": "v1InterviewerPersonsUsingGet",
      "personsUsingGET_2": "v1InterviewerUserNameUsingGet",
    },
  ],
  "warnings": Array [
    "【警告】方法 \\"personsUsingGET\\" 与 \\"get /api/v1/interviewer/persons\\" 不匹配，自动纠正为 \\"personsUsingGET_1\\"",
    "【警告】方法 \\"personsUsingGET_1\\" 与 \\"get /api/v1/persons\\" 不匹配，自动纠正为 \\"personsUsingGET\\"",
  ],
}
`;

exports[`guard operationIdGuard strict mode should work ok: 2 autofix 2`] = `
Object {
  "basePath": "/",
  "paths": Object {
    "/api/v1/interviewer/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "v1InterviewerPersonsUsingGet",
        "parameters": Array [],
        "privateOperationId": "v1InterviewerPersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
    "/api/v1/interviewer/{user-name}": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "v1InterviewerUserNameUsingGet",
        "parameters": Array [],
        "privateMethodUrl": "get /api/v1/interviewer/{user-name}",
        "privateOperationId": "v1InterviewerUserNameUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
    "/api/v1/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "v1PersonsUsingGet",
        "parameters": Array [],
        "privateOperationId": "v1PersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
  },
}
`;

exports[`guard operationIdGuard strict mode should work ok: 3 remove error 1`] = `
Object {
  "errors": Array [
    "【错误】方法 \\"personsUsingGET\\" 对应的 \\"get /api/v1/persons\\" 似乎已被移除或者发生了变化，请更新",
    "【错误】方法 \\"personsUsingGET_1\\" 对应的 \\"get /api/v1/interviewer/persons\\" 似乎已被移除或者发生了变化，请更新",
    "【错误】方法 \\"personsUsingGET_2\\" 对应的 \\"get /api/v1/interviewer/{user-name}\\" 似乎已被移除或者发生了变化，请更新",
  ],
  "suggestions": Array [],
  "warnings": Array [],
}
`;

exports[`guard operationIdGuard strict mode should work ok: 3 remove error 2`] = `
Object {
  "basePath": "/",
  "paths": Object {},
}
`;

exports[`guard operationIdGuard strict mode should work ok: 4 partial remove error 1`] = `
Object {
  "errors": Array [
    "【错误】方法 \\"personsUsingGET\\" 对应的 \\"get /api/v1/persons\\" 似乎已被移除或者发生了变化，请更新",
    "【错误】方法 \\"personsUsingGET_2\\" 对应的 \\"get /api/v1/interviewer/{user-name}\\" 似乎已被移除或者发生了变化，请更新",
  ],
  "suggestions": Array [],
  "warnings": Array [
    "【警告】方法 \\"personsUsingGET\\" 与 \\"get /api/v1/interviewer/persons\\" 不匹配，自动纠正为 \\"personsUsingGET_1\\"",
  ],
}
`;

exports[`guard operationIdGuard strict mode should work ok: 4 partial remove error 2`] = `
Object {
  "basePath": "/",
  "paths": Object {
    "/api/v1/interviewer/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET_1",
        "parameters": Array [],
        "privateOperationId": "v1InterviewerPersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
  },
}
`;

exports[`guard operationIdGuard strict mode should work ok: 5 partial remove ok 1`] = `
Object {
  "errors": Array [
    "【错误】方法 \\"personsUsingGET\\" 对应的 \\"get /api/v1/persons\\" 似乎已被移除或者发生了变化，请更新",
    "【错误】方法 \\"personsUsingGET_2\\" 对应的 \\"get /api/v1/interviewer/{user-name}\\" 似乎已被移除或者发生了变化，请更新",
  ],
  "suggestions": Array [],
  "warnings": Array [
    "【警告】方法 \\"personsUsingGET\\" 与 \\"get /api/v1/interviewer/persons\\" 不匹配，自动纠正为 \\"personsUsingGET_1\\"",
  ],
}
`;

exports[`guard operationIdGuard strict mode should work ok: 5 partial remove ok 2`] = `
Object {
  "basePath": "/",
  "paths": Object {
    "/api/v1/interviewer/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET_1",
        "parameters": Array [],
        "privateOperationId": "v1InterviewerPersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "OK",
          },
        },
      },
    },
  },
}
`;

exports[`guard operationIdGuard strict mode should work ok: 6 params check error 1`] = `
Object {
  "errors": Array [
    "【错误】\\"query\\" 参数 \\"bad arg\\" \\"bad arg\\" 不符合规范，请联系接口方修改",
    "【错误】\\"form\\" 参数 \\"bad-arg\\" \\"bad-arg\\" 不符合规范，请联系接口方修改",
    "【错误】\\"path\\" 参数 \\"bad坏arg\\" \\"bad坏arg\\" 不符合规范，请联系接口方修改",
  ],
  "suggestions": Array [],
  "warnings": Array [],
}
`;

exports[`guard operationIdGuard strict mode should work ok: 6 params check error 2`] = `
Object {
  "basePath": "/",
  "paths": Object {
    "/api/v1/interviewer/persons": Object {
      "get": Object {
        "deprecated": false,
        "operationId": "personsUsingGET",
        "parameters": Array [
          Object {
            "description": "bad arg",
            "in": "query",
            "name": "bad arg",
            "required": false,
          },
          Object {
            "description": "bad-arg",
            "in": "form",
            "name": "bad-arg",
            "required": false,
          },
          Object {
            "description": "bad坏arg",
            "in": "path",
            "name": "bad坏arg",
            "required": false,
          },
          Object {
            "description": "good arg",
            "in": "path",
            "name": "goodArg",
            "required": false,
          },
        ],
        "privateMethodUrl": "get /api/v1/interviewer/persons",
        "privateOperationId": "v1InterviewerPersonsUsingGet",
        "responses": Object {
          "200": Object {
            "description": "Test",
          },
        },
      },
    },
  },
}
`;

exports[`guard strictModeGuard should work ok: strictModeGuard 1`] = `
Object {
  "errors": Array [
    "【错误】 tags \\"{
  \\"name\\": \\"错误\\",
  \\"description\\": \\"这个tags不合格\\"
}\\" 命名包含非英文字符，请联系接口方修改",
    "【错误】 tags \\"{
  \\"name\\": \\"xxx-controller\\",
  \\"description\\": \\"这个tags不合格\\"
}\\" 命名不符合规范或由于 @Api 未添加 tags，存在不可控风险，请联系接口方修改",
  ],
  "warnings": Array [],
}
`;
